stack-test2.log
Stack has not been tested with GHC versions above 9.4, and using 9.6.7, this may fail
Stack has not been tested with Cabal versions above 3.8, but version 3.10.3.0 was found, this may fail
p3> build (lib + exe + test)
Preprocessing library for p3-0.1.0.0..
Building library for p3-0.1.0.0..
Preprocessing executable 'front' for p3-0.1.0.0..
Building executable 'front' for p3-0.1.0.0..
Preprocessing test suite 'p3-test' for p3-0.1.0.0..
Building test suite 'p3-test' for p3-0.1.0.0..
Preprocessing executable 'sim' for p3-0.1.0.0..
Building executable 'sim' for p3-0.1.0.0..
[1 of 2] Compiling Main

/home/diego/Desktop/p3/sim/Main.hs:76:3: error: [GHC-62161] [-Wincomplete-patterns, Werror=incomplete-patterns]
    Pattern match(es) are non-exhaustive
    In an equation for ‘selectValue’:
        Patterns of type ‘Value’, ‘Env Simulator’,
                         ‘Env Simulator’ not matched:
            (ClosureVal _ _ _) _ _
   |
76 |   selectValue (BoolVal True) e1 _ = e1
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the following errors:
       
       [S-7011]
       While building package p3-0.1.0.0 (scroll up to its section to see the error) using:
       /home/diego/.stack/setup-exe-cache/x86_64-linux-tinfo6/Cabal-simple_SvXsv1f__3.10.3.0_ghc-9.6.7 --verbose=1 --builddir=.stack-work/dist/x86_64-linux-tinfo6/Cabal-3.10.3.0 build lib:p3 exe:front exe:sim test:p3-test --ghc-options ""
       Process exited with code: ExitFailure 1 
